*Empty MediaWiki Message*

--- a/Montenegru.mw
+++ b/Montenegru.mw
@@ -6,7 +6,7 @@
 |image_coat = Coat of arms of Serbia and Montenegro.svg
 |image_map = LocationSerbiaAndMontenegro.png
 |national_motto = none
-|national_anthem = [[Hej Sloveni]]
+|national_anthem = [[Heil Sloveni]]
 |official_languages = [[Serbian language|Serbian]]<sup><small>1</small></sup>
 |capital = [[Belgrade]] (Executive and Legislative)<br /><small>{{coor d|44.48|N|20.28|E|region:Europe}}</small><br />[[Podgorica]] (Judicial)
 |latd= 42|latm=47 |latNS= N|longd= 19|longm= 28|longEW= E
