*Empty MediaWiki Message*

--- a/Jacksonville,_Florida.mw
+++ b/Jacksonville,_Florida.mw
@@ -66,7 +66,7 @@
 * Dr. Caroyln Williams, ''Historic Photos of Jacksonville,'' Turner Publishing Company, 2006. 
 
 == Dalerayan ==
-* Jacksonville is a dirty, dirty place. That smells like underwear.
+* Jacksonville is a dirty, dirty place that smells like underwear.
 * [http://www.jacksonville.com/tu-online/stories/082500/met_axhandle.html 40 years ago this weekend, Jacksonville gave itself a national reputation for violence]. ''The Florida Times-Union''.
 * DeCamp, David (May 3, 2003). [http://jacksonville.com/tu-online/stories/050303/met_glover.shtml Racial graffiti found at Glover's headquarters]. ''The Florida Times-Union''.
 * Foley, Bill; Wood, Wayne (2001). ''The great fire of 1901'' (1st ed.). Jacksonville, Florida: The Jacksonville Historical Society. ISBN 0-9710261-0-6
