*Empty MediaWiki Message*

--- a/Dagohoy.mw
+++ b/Dagohoy.mw
@@ -1,5 +1,5 @@
-[[Image:Ph_locator_bohol_dagohoy.png|right|Map of Bohol showing the location of Dagohoy]]
-
+[[Image:Ph_locator_bohol_dagohoy.png|right|250px|Map of Bohol showing the location of Dagohoy]]
+[[File:Dagohoy Bohol 1.JPG|250px|right]]
 {{Philippine Census			
 | title = Sensus ning Populasyun <br> Dagohoy, Bohol
 | 1990 = 10527		
