*Empty MediaWiki Message*

--- a/Mabini,_Bohol.mw
+++ b/Mabini,_Bohol.mw
@@ -1,5 +1,5 @@
-[[Image:Ph_locator_bohol_mabini.png|right|Map of Bohol showing the location of Mabini]]
-
+[[Image:Ph_locator_bohol_mabini.png|right|230px|Map of Bohol showing the location of Mabini]]
+[[File:Mabini Bohol 1.JPG|230px|right]]
 {{Philippine Census			
 | title = Sensus ning Populasyun <br> Mabini, Bohol
 | 1990 = 34400		
