*Empty MediaWiki Message*

--- a/San_Miguel,_Bohol.mw
+++ b/San_Miguel,_Bohol.mw
@@ -1,4 +1,4 @@
-[[Image:Ph_locator_bohol_san miguel.png|right|Map of Bohol showing the location of San Miguel]]
+[[Image:Ph_locator_bohol_san miguel.png|right|230px|Map of Bohol showing the location of San Miguel]]
 
 {{Philippine Census			
 | title = Sensus ning Populasyun <br> San Miguel, Bohol
@@ -41,6 +41,11 @@ Ing San Miguel atin yang 18ng [[barangay]].
 * Santo Niño
 * Tomoc
 </td></tr></table>
+
+<gallery>
+San Miguel Bohol 1.jpg
+San Miguel Bohol 2.jpg
+</gallery>
 
 ==Kasusug Kilwal==
 
