*Empty MediaWiki Message*

--- a/Pilar,_Bohol.mw
+++ b/Pilar,_Bohol.mw
@@ -1,4 +1,4 @@
-[[Image:Ph_locator_bohol_pilar.png|right|Map of Bohol showing the location of Pilar]]
+[[Image:Ph_locator_bohol_pilar.png|right|225px|Map of Bohol showing the location of Pilar]]
 
 {{Philippine Census			
 | title = Sensus ning Populasyun <br> Pilar, Bohol
@@ -44,6 +44,11 @@ Ing Pilar atin yang 21ng a  [[barangay]].
 * San Isidro
 * San Vicente
 </td></tr></table>
+
+<gallery>
+Pilar Bohol 1.JPG
+Pilar Bohol 2.JPG
+</gallery>
 
 ==Kasusug Kilwal==
 
