--- a/Nagoya,_Aichi.mw
+++ b/Nagoya,_Aichi.mw
@@ -54,7 +54,7 @@ Ing Nagoya atin yang 16 {{nihongo|[[Wards of Japan|wards]]|区|ku}}:
 <gallery>
 File:Surface Entrance to Shiyakusho Station (Nagoya-Japan).jpg|Palub keng Shiyakusho Subway Station
 File:Nagoya uitzicht.jpg|Ing akakit keng matas king Nagoya
-File:Nagoya Station(JR Central Towers).jpg|Ing JR Central Towers at [[Nagoya Station]], ing pekamaragul diling train station keti mabilug a yatu agpang keng lapad ning lande.
+File:JR Central Towers.jpg|Ing JR Central Towers at [[Nagoya Station]], ing pekamaragul diling train station keti mabilug a yatu agpang keng lapad ning lande.
 </gallery>
 
 == Kapatad lakanbalen ==
