([[Commons:Commons:GlobalReplace|GlobalReplace v0.6.5]])

--- a/Aprika.mw
+++ b/Aprika.mw
@@ -272,7 +272,7 @@ Ing '''Aprika''' o '''Africa''' iya ing pang-peka maragul at peka-siksik a popul
 | align="right" | 3,575.2
 | —
 |-
-| [[File:MadeiraFlag.png|20px]] [[Madeira Islands]] ([[Portugal]])
+| [[File:Flag of Madeira.svg|20px]] [[Madeira Islands]] ([[Portugal]])
 | align="right" | 797
 | align="right" | 245,000
 | align="right" | 307.4
