*Empty MediaWiki Message*

--- a/Mauling_Australia.mw
+++ b/Mauling_Australia.mw
@@ -3,7 +3,7 @@
 |Name               = South Australia
 |Fullname           = State ning South Australia
 |Flag               = Flag of South Australia.svg
-|CoatOfArms         =Coat_of_arms_of_South_Australia.png
+|CoatOfArms         =South Australian Coat of Arms.svg
 |Motto              = 
 |Map                = South Australia locator-MJC.png
 |Nickname           = Festival State
