--- a/A_Baña.mw
+++ b/A_Baña.mw
@@ -24,7 +24,7 @@ timezone_DST = [[Central European Time|CET]] |
 utc_offset_DST = +2 |
 latitude =  |
 longitude =  |
-website = ? |
+website = http://concellodabana.gal/ |
 footnotes = |
 }}
 Ing '''A Baña''' metung yang [[balen]] ning [[Espanya]] king [[A Coruña (lalawigan)|Lalawigan ning  A Coruña]], metung a makasariling communidad ning [[Galicia (Espanya)|Galicia]]. Atin yang lualas a  98.63 km², populasyun a 4,888 (2004 calcula) ampong populasyun a pangasiksik a 49.56 katau/km².
