*Empty MediaWiki Message*

--- a/Tasmania.mw
+++ b/Tasmania.mw
@@ -1,4 +1,4 @@
-[[File:Coat of arms of Tasmania.png|right|150px]]
+[[File:Tasmania Coat of Arms.svg|right|150px]]
 {{Australia state or territory |
  Name = Tasmania |
  Fullname = State of Tasmania |
