*Empty MediaWiki Message*

--- a/New_South_Wales.mw
+++ b/New_South_Wales.mw
@@ -4,7 +4,7 @@
  Name = New South Wales |
  Fullname = State of New South Wales |
  Flag = Flag of New South Wales.svg |
- CoatOfArms = New South Wales coa.png |
+ CoatOfArms = Coat of Arms of New South Wales.svg |
  Map = New South Wales locator-MJC.png |
  Motto = "Orta Recens Quam Pura Nites"<br />(Newly Risen, How Brightly You Shine) |
  Nickname = First State, Premier State|
