([[Commons:Commons:GlobalReplace|GlobalReplace v0.6.5]])

--- a/Frankfurt.mw
+++ b/Frankfurt.mw
@@ -4,7 +4,7 @@
 |Art                = City
 |image_photo        = Skyline Frankfurt am Main.jpg
 |image_caption      = The skyline of Frankfurt at dusk
-|Wappen             = Wappen-frankfurt.png
+|Wappen             = Wappen Frankfurt am Main.svg
 |lat_deg            = 50 | lat_min = 6 | lat_sec = 37
 |lon_deg            = 8 | lon_min = 40 | lon_sec = 56
 |Lageplan           = Hessen F.png
