*Empty MediaWiki Message*

--- a/Albugang_Australia.mw
+++ b/Albugang_Australia.mw
@@ -2,7 +2,7 @@
   | Name            = Western Australia
   | Fullname        = State of Western Australia 
   | Flag            = Flag of Western Australia.svg
-  | CoatOfArms      = Western Australia coa.png
+  | CoatOfArms      = Western Australian Coat of Arms.svg
   | Map             = Western Australia locator-MJC.png
   | Nickname        = Wildflower State or the "Golden State"
   | Emblems         = Floral - [[Kangaroo Paw]] (''Anigozanthos manglesii''); Mammal - [[Numbat]] (''Myrmecobius fasciatus''); Bird - [[Black Swan]] (''Cygnus atratus'')
