*Empty MediaWiki Message*

--- a/Alcantara,_Cebu.mw
+++ b/Alcantara,_Cebu.mw
@@ -29,6 +29,12 @@ Ing Alcantara atin yang 9 a [[barangay]].
 * Polo
 * Salagmaya
 
+
+<gallery>
+Alcantara Cebu 1.JPG
+Alcantara Cebu 2.JPG
+</gallery>
+
 ==Suglung Palwal==
 
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
