*Empty MediaWiki Message*

--- a/Badian.mw
+++ b/Badian.mw
@@ -1,5 +1,5 @@
-[[Image:Ph_locator_cebu_badian.png|right|Map of Cebu showing the location of Badian]]
-
+[[Image:Ph_locator_cebu_badian.png|right|230px|Map of Cebu showing the location of Badian]]
+[[File:Badian Cebu.JPG|230px|right]]
 {{Philippine Census			
 | title = Sensus ning Populasyun <br> Badian, Cebu
 | 1990 = 26545		
