*Empty MediaWiki Message*

--- a/Barili.mw
+++ b/Barili.mw
@@ -1,5 +1,5 @@
-[[Image:Ph_locator_cebu_barili.png|right|Map of Cebu showing the location of Barili]]
-
+[[Image:Ph_locator_cebu_barili.png|right|225px|Map of Cebu showing the location of Barili]]
+[[File:Barili Cebu 1.JPG|225px|thumb|right|Poblacion]]
 {{Philippine Census			
 | title = Sensus ning Populasyun <br> Barili, Cebu
 | 1990 = 47789		
@@ -14,8 +14,6 @@
 |}}
 
 Ing '''Barili''' pang3 yang klasing [[Balen Filipinas|balen]] king [[Lalawigan Filipinas|lalawigan]] ning [[Cebu|Cebu]], [[Filipinas]]. Agpang keng [[2000]] sensus, atin yang populasyun a 57,764 a katau kareng  11,164 a pamimalemale.
-
-
 
 ==Deng Barangay==
 
@@ -68,8 +66,6 @@ Ing Barili atin yang 42ng [[barangay]].
 * Tubod
 * Vito
 </td></tr></table>
-
-
 
 ==Suglung Palwal==
 
