*Empty MediaWiki Message*

--- a/Dumanjug.mw
+++ b/Dumanjug.mw
@@ -1,5 +1,5 @@
-[[Image:Ph_locator_cebu_dumanjug.png|right|Map of Cebu showing the location of Dumanjug]]
-
+[[Image:Ph_locator_cebu_dumanjug.png|right|225px|Map of Cebu showing the location of Dumanjug]]
+[[File:Dumanjug Cebu 1.JPG|225px|right]]
 {{Philippine Census			
 | title = Sensus ning Populasyun <br> Dumanjug, Cebu
 | 1990 = 31932		
@@ -14,7 +14,6 @@
 |}}
 
 Ing '''Dumanjug''' pang4 yang klasing [[Balen Filipinas|balen]] king [[Lalawigan Filipinas|lalawigan]] ning [[Cebu|Cebu]], [[Filipinas]]. Agpang keng [[2000]] sensus, atin yang populasyun a 39,666 a katau kareng  7,787a pamimalemale.
-
 
 ==Deng Barangay==
 
