--- a/Moalboal.mw
+++ b/Moalboal.mw
@@ -1,5 +1,5 @@
-[[Image:Ph_locator_cebu_moalboal.png|right|Map of Cebu showing the location of Moalboal]]
-
+[[Image:Ph_locator_cebu_moalboal.png|right|230px|Map of Cebu showing the location of Moalboal]]
+[[File:Moalboal Cebu 4.JPG|230px|right]]
 {{Philippine Census			
 | title = Sensus ning Populasyun <br> Moalboal, Cebu
 | 1990 = 20041		
@@ -14,7 +14,6 @@
 |}}
 
 Ing '''Moalboal''' pang4 yang klasing [[Balen Filipinas|balen]] king [[Lalawigan Filipinas|lalawigan]] ning [[Cebu|Cebu]], [[Filipinas]]. Agpang keng [[2000]] sensus, atin yang populasyun a 23,402 a katau kareng  4,790 a pamimalemale.
-
 
 ==Deng Barangay==
 Ing Moalboal atin yang 15ng [[barangay]].
