--- a/Naga,_Cebu.mw
+++ b/Naga,_Cebu.mw
@@ -1,9 +1,6 @@
-[[File:Ph_locator_cebu_naga.png|right|Map of Cebu showing the location of Naga]]
-
+[[File:Ph_locator_cebu_naga.png|right|230px|Map of Cebu showing the location of Naga]]
+[[File:Naga Cebu.JPG|230px|right]]
 Ing '''Naga''' pang4 yang klasing [[Balen Filipinas|balen]] king [[Lalawigan Filipinas|lalawigan]] ning [[Cebu]], [[Filipinas]]. Agpang keng [[2000]] sensus, atin yang populasyun a 80,189 a katau kareng 15,806 a pamimalemale.
-
-
-
 
 == Deng Barangay ==
 
