*Empty MediaWiki Message*

--- a/Ronda.mw
+++ b/Ronda.mw
@@ -1,5 +1,5 @@
-[[Image:Ph_locator_cebu_ronda.png|right|Map of Cebu showing the location of Ronda]]
-
+[[Image:Ph_locator_cebu_ronda.png|right|230px|Map of Cebu showing the location of Ronda]]
+[[File:Ronda Cebu 2.JPG|230px|right]]
 {{Philippine Census			
 | title = Sensus ning Populasyun <br> Ronda, Cebu
 | 1990 = 15018		
