*Empty MediaWiki Message*

--- a/San_Fernando,_Cebu.mw
+++ b/San_Fernando,_Cebu.mw
@@ -1,5 +1,5 @@
-[[Image:Ph_locator_cebu_san fernando.png|right|Map of Cebu showing the location of San Fernando]]
-
+[[Image:Ph_locator_cebu_san fernando.png|right|225px|Map of Cebu showing the location of San Fernando]]
+[[File:San Fernando Cebu.JPG|225px|right]]
 {{Philippine Census			
 | title = Sensus ning Populasyun <br> San Fernando, Cebu
 | 1990 = 35051		
@@ -49,7 +49,5 @@ Ing San Fernando atin yang 21ng a [[barangay]].
 
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.t-macs.com/kiso/local/ 2000 Philippine Census Information]
-
-
 
 [[Category:Ding Balen ning Cebu]]
