--- a/Toledo.mw
+++ b/Toledo.mw
@@ -1,7 +1,6 @@
-[[File:Ph_locator_cebu_toledo.png|right|Map of Cebu showing the location of Toledo City]]
-
-
-
+[[File:Ph_locator_cebu_toledo.png|right|230px|Map of Cebu showing the location of Toledo City]]
+[[File:Toledo Cebu 1.JPG|230px|right]]
+[[File:Toledo Cebu 2.JPG|230px|right]]
 Ing '''Lakanbalen ning Toledo''' dati yang '''Pueblo Hinulawan''', pang2 yang klasing [[Ding Lakanbalen ning Filipinas|lakanbalen]] king [[Ding Lalawigan ning Filipinas|lalawigan]] ning [[Cebu]], [[Filipinas]]. Agpang keng [[2000]] sensus, atin yang populasyun a 141,174 a katau kareng 26,771 a pamimalemale.
 
 Ing Toledo meging yang lakanbalen inyang [[Eneru 6]], [[1961]].
