--- a/Bacacay.mw
+++ b/Bacacay.mw
@@ -79,7 +79,7 @@ Ing Bacacay atin yang 56 a [[barangay]].
 * Tanagan
 * Uson
 * Vinisitahan-Basud (Mainland)
-* Vinisitahan-Napao (lsland)
+* Vinisitahan-Napao (Island)
 |}
 
 ==Kasusug Kilwal==
