*Empty MediaWiki Message*

--- a/Nibel.mw
+++ b/Nibel.mw
@@ -1,7 +1,7 @@
 [[File:DetalleNivelDeBurbuja.jpg|right|thumb|Metung a nibel]]
 Ing metung a '''nibel''' (‘’spirit level’’ o ‘’bubble level’’ king Ingles) metung yang [[kasangkapan]] a gagamitan bang mabalu nung pante ya pangakera o pangatikdo (plumb) ing metung a patag (surface). 
 
-Aniang mumuna, ating lang aduang ampolias (glass vial) a tabas-sagin king balang pisisilipan (viewing point), at mas komplikadu lang gamitan deng nibel. Kanitang dekadang 1920, i [[Henry Ziemann]], ing mitátag king [[w:Empire Level]], inimbentu ne ing makabayung nibel a maki metung mung ampolias. Deting ampolyas, a mayayakit kareng keraklan a karaniwang nibel ngeni, atin lang tubong salamin a makabaluktut bagya at e laganas a sapak king likidu, a keraklan ‘spirit’ (ing aus da king [[ethanol]], metung a uri ning alcohol)ania ating bulang lalto king tubo. Gagamitan de ing ethanol uling mababa ing kayang [[w:freezing point]] (temperatura ning pamagyelu]], −114&nbsp;°C, at e magyelu neng marimla ing panaun. Keraklan, gagamitan do reng nibel bang ipakit nung pante ya pangakera (level) o pangatikdo (plumb) ing metung a patag o surface.
+Aniang mumuna, ating lang aduang ampolias (glasi,mujmkmjymyumjyujyumjyhnhnthnyhnhynyny king balang pisisilipan (viewing point), at mas komplikadu lang gamitan deng nibel. Kanitang dekadang 1920, i [[Henry Ziemann]], ing mitátag king [[w:Empire Level]], inimbentu ne ing makabayung nibel a maki metung mung ampolias. Deting ampolyas, a mayayakit kareng keraklan a karaniwang nibel ngeni, atin lang tubong salamin a makabaluktut bagya at e laganas a sapak king likidu, a keraklan ‘spirit’ (ing aus da king [[ethanol]], metung a uri ning alcohol)ania ating bulang lalto king tubo. Gagamitan de ing ethanol uling mababa ing kayang [[w:freezing point]] (temperatura ning pamagyelu]], −114&nbsp;°C, at e magyelu neng marimla ing panaun. Keraklan, gagamitan do reng nibel bang ipakit nung pante ya pangakera (level) o pangatikdo (plumb) ing metung a patag o surface.
 
 Deng aliwang nibel, agyu de muring pakit ing anggulu ning metung a patag pilatan ning pakera (horizontal) ampong patikdo (vertical). Ing simpling diling uri ning nibel, ya pin ing [[bull's eye level]]: metung a kasangkapan a mabilug at pante king lalam, nung nu atyu ing likidu king lalam ning lupang salamin a convex (makalual libutad) bagya, nung nu ya malinong mayayakit ing sentru. Papakit na ing pangapante ning metung a patag kareng aduang direksiun/nangan a mikukurus (perpendicular), kabang itang [[w:tubular level]] agyu na mung gawan iti king direksiun ning tubo. Saktu la angga king limang kayapulung libu ning pulgada (.0005) balang pulgada, at mas malagua lang basan uling iro/asul ing karelang kule. Nung kailangan yang gamitan a agiang baligtad ya ing metung a nibel, tubo yang tabas-barilis ing magagamit, imbes na tubong tabas-sagin. Uli na niti, pane yang ustu tabas ing babo nang patag a pangkilub (upper internal surface) nign tubo. Anti la kaniti tabas deng keraklan kareng makabayung nibel, uling ampolias a plastic ing gagamitan da imbes na salamin a baluktut. 
 
