--- a/Cagayan.mw
+++ b/Cagayan.mw
@@ -2,7 +2,7 @@ Ing '''Cagayan''' metung yang [[Ding Lalawigan ning Filipinas|lalawigan]] ning [
 
 {{Infobox Philippine province|
 infoboxtitle=Lalawigan ning Cagayan|
-sealfile=[[Image:Ph_seal_cagayan.png]]|
+sealfile=[[Image:Cagayan-seal ph.png|150px]]|
 region=[[Saug Cagayan]] (Labuad II)|
 capital=[[Tuguegarao Lakanbalen]]|
 founded=&mdash;|
