*Empty MediaWiki Message*

--- a/San_Vicente,_Northern_Samar.mw
+++ b/San_Vicente,_Northern_Samar.mw
@@ -1,5 +1,5 @@
-[[Image:Ph_locator_northern samar_san vicente.png|right|Map of Northern Samar showing the location of San Vicente]]
-
+[[Image:Ph_locator_northern samar_san vicente.png|right|230px|Map of Northern Samar showing the location of San Vicente]]
+[[File:San Vicente NorSam.jpg|230px|right]]
 {{Philippine Census			
 | title = Sensus ning Populasyun <br> San Vicente, Northern Samar
 | 1990 = 5777		
