/* Espanyol a Colonial a Gubyernu (1764-1899) */

--- a/Gobernador-Heneral_ning_Filipinas.mw
+++ b/Gobernador-Heneral_ning_Filipinas.mw
@@ -137,7 +137,7 @@ Ing'''[[Gobernador-Heneral]] ning Filipinas''' iya ing pamansag da kareng pekapu
 |-
 |align="center"|[[Image:Escudo del rey de España abreviado antes de 1868.svg|80px]]||align="center"|[[Pedro de Sarrio|Pedro de Sarrio (Soriano)]]||align="center"|[[Noviembri 22]], [[1787]]||align="center"|[[Juliu 1]], [[1788]]
 |-
-|align="center"|[[Image:Félix Berenguer de Marquina.jpg|80px]]||align="center"|[[Félix Berenguer de Marquina]]||align="center"|[[Juliu 1]], [[1788]]||align="center"|[[Septiembri 1]], [[1793]]
+|align="center"|[[Image:64 FelixBerenguerdeMarquina.jpg|80px]]||align="center"|[[Félix Berenguer de Marquina]]||align="center"|[[Juliu 1]], [[1788]]||align="center"|[[Septiembri 1]], [[1793]]
 |-
 |align="center"|[[Image:Escudo del rey de España abreviado antes de 1868.svg|80px]]||align="center"|[[Rafael María de Aguilar y Ponce de León]]||align="center"|[[Septiembri 1]], [[1793]]||align="center"|[[Agostu 7]], [[1806]]
 |-
