--- a/Amanung_Pyamontes.mw
+++ b/Amanung_Pyamontes.mw
@@ -1,3 +1,25 @@
+{{Infobox language
+|name=Piedmontese
+|nativename=''Piemontèis''
+|state=[[Italy|Italya]]
+|region=[[Piedmont]] (pangulung-aslagang Italya)
+|speakers=1.6 million
+|date=2002
+|ref=e18
+|familycolor=Indo-European
+|fam1=[[Deng amanung Indo-Europeu|Indo-Europeu]]
+|fam2=[[Italic languages|Italiku]]
+|fam3=[[Romance languages|Romanse]]
+|fam4=[[Western Romance languages|Aslagan]]
+|fam5=[[Gallo-Romance languages|Galo-Romanse]]
+|fam6=[[Gallo-Italic languages|Galo-Italiku]]
+|iso3=pms
+|glotto=piem1238
+|glottorefname=Piemontese
+|lingua=51-AAA-of
+|notice=IPA
+}}
+
 Ing '''Amanung Pyamontes''' o '''Pyemontes''' (''Piemontèis'', [[Amanung Italyanu|Italyanu]]: ''piemontese, pedemontano'') metung ya kareng amanu king [[Italy|Italya]].
 
 {{Suli}}
