*Empty MediaWiki Message*

--- a/Amanung_Pyamontes.mw
+++ b/Amanung_Pyamontes.mw
@@ -1,5 +1,5 @@
 {{Infobox language
-|name=Piedmontese
+|name=Pyamontes, Piamontes, Pyemontes, Piemontes
 |nativename=''Piemontèis''
 |state=[[Italy|Italya]]
 |region=[[Piedmont]] (pangulung-aslagang Italya)
