*Empty MediaWiki Message*

--- a/Template:Infobox_surname.mw
+++ b/Template:Infobox_surname.mw
@@ -29,7 +29,7 @@
 | data13      = {{{variant|}}}
 | label14     = Deng kawugne/kognado
 | data14      = {{{cognate|}}}
-| label15     = (Mga) [[Pamaglikas king Ingles da reng lagyu|Pamaglikas king Ingles]]
+| label15     = (Deng) [[Pamaglikas king Ingles da reng lagyu|Pamaglikas king Ingles]]
 | data15      = {{{anglicisation|}}}
 | label16     = Pikuwanan
 | data16      = {{{derivative|}}}
