--- a/Template:Infobox_surname.mw
+++ b/Template:Infobox_surname.mw
@@ -8,7 +8,7 @@
 | data1      = {{{pronunciation|}}}
 | label2     = Kasarian
 | data2      = {{{gender|}}}
-| label3     = [[Amanu|(Deng) amanu/pamiyalita]]
+| label3     = (Deng) [[Amanu|amanu/pamiyalita]]
 | data3      = {{{language|}}}
 | header4    = {{#if:{{{masculine|}}}{{{feminine|}}}|Aliwang Kasarian}} 
 | label5     = Lalaki
