*Empty MediaWiki Message*

--- a/Lexa.mw
+++ b/Lexa.mw
@@ -1,4 +1,4 @@
-I '''Lexa''' (mibayit '''Léa Cristina Araújo da Fonseca''',) metung yang talakanta ampong artista king [[Brasil]].
+I '''Lexa''' (mibayit '''Léa Cristina Lexa Araújo''',) metung yang talakanta ampong artista king [[Brasil]].
 
 ==Suglung a paluwal==
 {{Commons category|Lexa}}
