--- a/Novak_Djokovic.mw
+++ b/Novak_Djokovic.mw
@@ -12,17 +12,17 @@
 |weight = {{convert|80|kg|lb st|abbr=on}}
 |turnedpro = 2003
 |plays = Right-handed (two-handed backhand)
-|careerprizemoney = [[US$|$]]45.686.497
-|singlesrecord = 476–123 (79.47%)
-|singlestitles = 35
+|careerprizemoney = [[US$|$]]101.917.404
+|singlesrecord = 730–149 (79.47%)
+|singlestitles = 65
 |currentsinglesranking = No. '''1''' (28 January 2013)<ref>{{cite web|url=http://www.atpworldtour.com/Rankings/Singles.aspx |title=ATP World Tour – Singles Rankings |accessdate=21 August 2012 |work=ATP Tour }}</ref>
 |highestsinglesranking = Mumuna (4 Julio 2011)
-|AustralianOpenresult = '''W''' ([[2008 Australian Open – Men's Singles|2008]], [[2011 Australian Open – Men's Singles|2011]], [[2012 Australian Open – Men's Singles|2012]], [[2013 Australian Open – Men's Singles|2013]])
-|FrenchOpenresult = F ([[2012 French Open – Men's Singles|2012]])
-|Wimbledonresult = '''W''' ([[2011 Wimbledon Championships – Men's Singles|2011]])
-|USOpenresult = '''W''' ([[2011 US Open – Men's Singles|2011]])
+|AustralianOpenresult = '''W''' ([[2008 Australian Open – Men's Singles|2008]], [[2011 Australian Open – Men's Singles|2011]], [[2012 Australian Open – Men's Singles|2012]], [[2013 Australian Open – Men's Singles|2013]], [[2015 Australian Open – Men's Singles|2015]], [[2016 Australian Open – Men's Singles|2016]])
+|FrenchOpenresult = '''W''' ([[2016 French Open – Men's Singles|2016]])
+|Wimbledonresult = '''W''' ([[2011 Wimbledon Championships – Men's Singles|2011]], [[2015 Wimbledon Championships – Men's Singles|2015]])
+|USOpenresult = '''W''' ([[2011 US Open – Men's Singles|2011]], [[2015 US Open – Men's Singles|2015]])
 |Othertournaments = Yes
-|MastersCupresult = '''W''' ([[2008 ATP World Tour Finals – Singles|2008]], [[2012 ATP World Tour Finals – Singles|2012]])
+|MastersCupresult = '''W''' ([[2008 ATP World Tour Finals – Singles|2008]], [[2012 ATP World Tour Finals – Singles|2012]], [[2013 ATP World Tour Finals – Singles|2013]], [[2014 ATP World Tour Finals – Singles|2014]], [[2015 ATP World Tour Finals – Singles|2015]])
 |Olympicsresult = [[File:Bronze medal.svg|20px]] '''Bronze medalya''' ([[Tennis at the 2008 Summer Olympics – Men's singles|2008]])
 |doublesrecord = 31-45
 |doublestitles = 1
@@ -32,7 +32,7 @@
 |AustralianOpenDoublesresult = 1R ([[2006 Australian Open – Men's Doubles|2006]], [[2007 Australian Open – Men's Doubles|2007]])
 |WimbledonDoublesresult = 1R ([[2006 Wimbledon Championships – Men's Doubles|2006]])
 |USOpenDoublesresult = 1R ([[2006 US Open – Men's Doubles|2006]])
-|updated = 28 January 2013
+|updated = 20 June 2016
 }}
 
 {{MedalTop}}
