*Empty MediaWiki Message*

--- a/Bangsang_estadu.mw
+++ b/Bangsang_estadu.mw
@@ -1,5 +1,5 @@
 {{Forms of government}}
-[[Image:The Ratification of the Treaty of Munster, Gerard Ter Borch (1648).jpg|thumb|250px|Larawan ning "Ing Ratipikasyun ning Ratification of the Tratadu ning Münster", metung kareng tratadung papunta king [[Karatunan ning Westphalia]] (''Peace of Westphalia''), nung nu ya linto ing konseptu ning '''bangsang estadu''']]
+[[Image:Westfaelischer Friede in Muenster (Gerard Terborch 1648).jpg|thumb|250px|Larawan ning "Ing Ratipikasyun ning Ratification of the Tratadu ning Münster", metung kareng tratadung papunta king [[Karatunan ning Westphalia]] (''Peace of Westphalia''), nung nu ya linto ing konseptu ning '''bangsang estadu''']]
 Ing '''bangsang estadu''' (''nation state'') metung yang [[Estadu (polity)|estadu]]ng mangilala king sarili nang  kukwa king kayang [[pangalehitimu (pampulitika)|pangalehitimung pampulitika]] king kayang pamagsilbi antimong magsariling talapagdala ning [[bangsa]] antimong [[magsariling estadu|magsariling labwad]].<ref>Such a definition is a working one: "All attempts to develop terminological consensus around ''nation'' resulted in failure", concludes {{cite journal |first=Valery |last=Tishkov |title=Forget the 'nation': post-nationalist understanding of nationalism |journal=[[Ethnic and Racial Studies]] |volume=23 |issue=4 |year=2000 |pages=625–650 [p. 627] }} {{cite journal |first=Walker |last=Connor |title=A Nation is a Nation, is a State, is an Ethnic Group, is a… |journal=Ethnic and Racial Studies |volume=1 |issue= |year=1978 |pages=377–400 }} Discusses the impresion surrounding the characters of ''[[nation]]'', ''[[sovereign state|state]]'', ''nation state'', and ''[[nationalism]]'' Connor, who gave the term ''[[ethnonationalism]]'' wide currency, discusses the tendency to confuse nation and state, and to treat all states as nation states. Sheila L. Crouche, ''Globalization and belonging'' discusses "The Definitional Dilemma" pp85ff.</ref> Ing estadu metung yang [[pulitika|pampulitika]] ampong [[geopolitics|pang-geopolitical]] a bage; ing bangsa metung yang [[kultura |pangkultura]] ampong/o [[lahi|panglahi]]ng bage. Ing katayang "bangsang estadu" mangabaldugan yang mitutulid la reng adwa king metung a lugal mitatabnu la reng aliwa king metung a lugal. Milyari ing pamanalkus da reng bangsang estadu kareng miayaliwang panaun kareng miayaliwang dake ning yatu, oneng megi yang makababo o dominanting uri ning pamag-organisa ning estadu. 
 
 Malyari yang ikumpara o pakiyanti, ampong piyaliwa, ing konseptu na ampo ing tutu nang kabilyan ning bangsang estadu kareng [[multinational state]] (‘’multinational state’’), [[city state]] (‘’lakanbalen a estadu’’),
