*Empty MediaWiki Message*

--- a/Anodontostoma.mw
+++ b/Anodontostoma.mw
@@ -1,8 +1,10 @@
 {{Taxobox 
 | name = '''''Anodontostoma'''''
 | image = Anodontostoma chacunda.jpg
-| image_width = 
-| image_caption = ''Anodontostoma chacunda''
+| image_width = 240px
+| image_caption = 
+| image2 = 
+| image2_width = 240px
 | regnum = [[Animalia]]
 | phylum = [[Chordata]]
 | classis = [[Actinopterygii]]
