Replacing CCF12262007_00003.jpg with [[File:Mountains_west_of_Las_Vegas_in_the_Mojave_Desert.jpg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: [[:commons:COM:FR#reasons|File renaming criterion #2]]: To c

--- a/Nevada.mw
+++ b/Nevada.mw
@@ -52,7 +52,7 @@ Ing '''Nevada''' ({{Audio-IPA|En-us-nevada.ogg|/nɨˈvæːdə/}}) metung yang [[
 
 [[File:Digital-elevation-map-nevada.gif|thumb|Digital a  decolor a katas a mapa ning Nevada]]
 
-[[File:CCF12262007 00003.jpg|thumb|right|Deng bunduk albugan ning Las Vegas king [[Mojave Ilang (Desert)]]]]
+[[File:Mountains west of Las Vegas in the Mojave Desert.jpg|thumb|right|Deng bunduk albugan ning Las Vegas king [[Mojave Ilang (Desert)]]]]
 
 == Demographicu ==
 {{USCensusPop
