--- a/Nebraska.mw
+++ b/Nebraska.mw
@@ -57,7 +57,7 @@ Ing Nebraska mekad ikua ne ing kayang lagiu keng matuang ena magagamit a katayan
 
 === Pekamaragul a lakanbalen ===
 [[File:OmahaNE Downtown.jpg|thumb|[[Downtown Omaha]]]]
-[[File:Lincoln ne skyline.JPG|thumb|Downtown Lincoln]]
+[[File:Skyline of Downtown Lincoln, Nebraska, USA (2015).jpg|thumb|Downtown Lincoln]]
 {|-
 !align="left"|100,000+ population
 !align="left" colspan="2"|10,000+ population
