--- a/Lincoln,_Nebraska.mw
+++ b/Lincoln,_Nebraska.mw
@@ -2,7 +2,7 @@
 |official_name          = Lincoln, Nebraska
 |nickname               = Tala Lakanbalen
 |motto                  = 
-|image_skyline          = Lincoln ne skyline.JPG
+|image_skyline          = Skyline of Downtown Lincoln, Nebraska, USA (2015).jpg
 |imagesize              = 250px
 |image_caption          = Lincoln skyline
 |image_flag             = 
