--- a/Internet_Movie_Database.mw
+++ b/Internet_Movie_Database.mw
@@ -1,6 +1,6 @@
 {{Infobox Website
 |name           = Internet Movie Database (IMDb)
-|logo           = [[File:IMDb logo.png|200px]]
+|logo           = [[File:IMDB Logo 2016.svg|200px]]
 |screenshot     = [[File:Imdb.jpg|200px]]
 |caption        = IMDb homepage on February 20, 2011
 |url            = [http://www.imdb.com/ imdb.com]
