*Empty MediaWiki Message*

--- a/Dambach-la-Ville.mw
+++ b/Dambach-la-Ville.mw
@@ -5,8 +5,8 @@
 |canton=[[Canton of Barr|Barr]]
 |insee=67084
 |cp=67650
-|maire=Gérard Zippert
-|mandat=[[2001]]-[[2008]]|
+|maire=Claude Hauller
+|mandat=[[2014]]-[[2020]]|
 |intercomm=|Communauté de Communes du Bernstein et de l'Ungersberg
 |longitude=07° 25’ 41’’ E
 |latitude=48° 19’ 29’’ N
