Removing "Flag_of_Seattle.svg", it has been deleted from Commons by [[commons:User:INeverCry|INeverCry]] because: per [[:c:Commons:Deletion requests/Files uploaded by Szm007|]].

--- a/Seattle,_Washington.mw
+++ b/Seattle,_Washington.mw
@@ -3,7 +3,7 @@
 |official_name = Lakanbalen ning Seattle
 |image_skyline = Wiki_seattle_alki_01.jpg
 |nickname = The Emerald City
-|image_flag = Flag of Seattle.svg
+|image_flag =
 |image_seal = Seattle seal.png
 |image_map = Seattle in King County.png
 |map_caption = Location of Seattle in <br />[[King County, Washington|King County]] and [[Washington]]
