Replacing Cervates_jauregui.jpg with [[File:Cervantes_Jáuregui.jpg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: [[:commons:COM:FR#reasons|File renaming criterion #3]]: To correct obvious errors in file

--- a/Miguel_de_Cervantes.mw
+++ b/Miguel_de_Cervantes.mw
@@ -1,7 +1,7 @@
 {{Redirect|Cervantes}}
 {{Infobox Writer <!-- for more information see [[:Template:Infobox Writer/doc]] -->
 | name = Miguel de Cervantes Saavedra
-| image = Cervates jauregui.jpg
+| image = Cervantes Jáuregui.jpg
 | caption = Portrait commonly said to be that painted{{Ref_label|A|a|none}} by [[Juan Martínez de Jáuregui y Aguilar]] (c. 1600). Modern scholarship does not believe this portrait, or any other graphic representation of Cervantes, to be authentic.
 | birthdate = {{birth-date|September 19, 1547|September 29, 1547}} <!-- 1582 was Spain's switch to Gregorian.  The Julian date is displayed.  microformats requires gregorian form, and the offset to gregorian at the time was 10 days, giving September 19. -->
 | birthplace = [[Alcalá de Henares]], [[Espania]]
