--- a/Richard_Juan.mw
+++ b/Richard_Juan.mw
@@ -1,3 +1,50 @@
+{{Infobox Chinese-language singer and actor/sandbox
+| name                    = Richard Hwan<br>Richard Juan
+| gender                  = male
+| image                   = Richard Hwan Richard Juan.jpg
+| image_size              = 250px
+| alt                     = 
+| caption                 = 
+| chinesename             = 
+| tradchinesename         = 範鴻志
+| simpchinesename         = 范鸿志
+| pinyinchinesename       = Fàn Hóng Zhì
+| jyutpingchinesename     = Faan6 Hung4 Zi3
+| yalechinesename         = 
+| pojchinesename          = Hoān Hông Chì
+| birth_name              = Richard Ching Hwan
+| ethnicity               = [[Deng Tsinu|Tsinu]]
+| origin                  = 
+| birth_date              = {{Birth date and age|mf=yes|1992|08|02}}
+| birth_place             = 
+| death_date              = 
+| death_place             = 
+| restingplace            = 
+| restingplacecoordinates = 
+| othername               = Richard Juan
+| occupation              = [[TV personality|aktor]], [[Model (person)|modelu]]
+| genre                   = 
+| instrument              = 
+| voicetype               = 
+| label                   = 
+| yearsactive             = 2013-kasaleselan
+| associatedact           = 
+| currentmembers          = 
+| pastmembers             = 
+| spouse                  = 
+| partner                 = 
+| children                = 
+| parents                 = 
+| ancestry                = 
+| influences              = 
+| influenced              = 
+| education               = 
+| alma mater              = ''[[University of the Philippines]]''
+| website                 = 
+| alias                   = 
+}}
+
+
 I '''Richard Ching Hwan''' ([[Chinese language|Tsinu]]: '''Fan Hong Zhi''';<ref>{{cite web|url=https://www.facebook.com/richardhwanofficial |title=Facebook |publisher=Facebook |date= |accessdate=2014-07-29}}</ref> mibait Agostu 2, 1992), kebaluan ya murin anti mung '''Richard Hwan''' at '''Richard Juan''', metung yang personalidad king telebisyon ampong modelu king [[Pilipinas]].
 
 ==Deng Gantimpala at Nominasyon==
