*Empty MediaWiki Message*

--- a/Template:Infobox_Chinese-language_singer_and_actor%2Fsandbox.mw
+++ b/Template:Infobox_Chinese-language_singer_and_actor%2Fsandbox.mw
@@ -25,7 +25,7 @@
 | data1       = {{#if:{{{chinesename|}}}|<span style="font-size: 120%;">{{{chinesename|}}}</span>}}
 
 | label2      = Lagyung Tsinu
-| data2       = {{#if:{{{tradchinesename|}}}|<span style="font-size: 120%;" class="nickname">{{lang|zh-Hant|{{{tradchinesename}}}}}</span>  <small>([[Traditional Chinese characters|tradisyonal]])</small>}}
+| data2       = {{#if:{{{tradchinesename|}}}|<span style="font-size: 120%;" class="nickname">{{lang|zh-Hant|{{{tradchinesename}}}}}</span>  <small>([[Traditional Chinese characters|Tradisyonal]])</small>}}
 
 | label3      = Lagyung Tsinu
 | data3       = {{#if:{{{simpchinesename|}}}|<span style="font-size: 120%;" class="nickname">{{lang|zh-Hans|{{{simpchinesename}}}}}</span>  <small>([[Simplified Chinese characters|Pepayak]])</small>}}
