said the real definition

--- a/Bulig.mw
+++ b/Bulig.mw
@@ -1,4 +1,4 @@
-{{Taxobox
+bulig means penis in Armenian {{Taxobox
 | name = Snakehead
 | image = northern snakehead.jpg
 | image_width = 250px
@@ -16,7 +16,7 @@
 
 Ing '''bulig''', ('''Channidae''') metung yang familia na ning [[tabangdanum]] [[perciform]] a asan kebaluan bilang '''bulig''' o '''snakehead''' keng English, at katutubu ya king [[Africa]] ampong [[Asia]]. Atin aduang [[enera]], ''[[Channa]]'' king Asia, ampong ''[[Parachanna]]'' king Africa, a atin mga 30-35 species. Dening [[mangasu]]ng asan balu mula kapamilatan da ring karelang makabang [[dorsal a palikpik]], malating buntuk a atin kaliskis keng babo, maragula a asbuk ampong ipan. Mangailangan lang mangisnauang angin.
 
-Deti mayalaga lang pamangan a asan. Deng mangaragul antimo ing ''[[Channa striata]]'', ''[[Channa maculata]]'' o ''[[Parachanna obscura]]'' sesen dala keng [[aquaculture]]. 
+Deti mayalaga lang pamangan a asan. Deng mangaragul antimo ing ''[[Channa striata]]'', ''[[Channa maculata]]'' o ''[[Parachanna obscura]]'' sesen dala keng [[aquaculture]].
 
 == Notes ==
 {{reflist}}
