--- a/Himno_ning_Kapampangan.mw
+++ b/Himno_ning_Kapampangan.mw
@@ -1,7 +1,4 @@
-*[[HIMNU NING KAPAMPANGAN]]
-
-Kapampangan misapwak
-
+Himnu ning pwet 
 King legwan, na ning, alaya
 
 Gabun ding pantas at marangal
