--- a/Himno_ning_Kapampangan.mw
+++ b/Himno_ning_Kapampangan.mw
@@ -1,10 +1,6 @@
-Himnu ning pwet 
-King legwan, na ning, alaya
+Himno Ning Pwet By Julian Felipe 
 
-Gabun ding pantas at marangal
-
-Sibul ning lugud, karinan ning tepangan
-
+Mamate ka bakla ali da ka mahal nang mama mu mate nakamu
 Batis ning katalaruan, at panamdam makabalen
 
 Ligaya mi ing mie payapa
