*Empty MediaWiki Message*

--- a/Himno_ning_Kapampangan.mw
+++ b/Himno_ning_Kapampangan.mw
@@ -1,5 +1,5 @@
 Himno Ning Pwet By Julian Felipe 
-
+Go to youjizz.com and meatspin.com for more information :)
 Mamate ka bakla ali da ka mahal nang mama mu mate nakamu
 Batis ning katalaruan, at panamdam makabalen
 
