--- a/Himno_ning_Kapampangan.mw
+++ b/Himno_ning_Kapampangan.mw
@@ -1,6 +1,13 @@
-Himno Ning Pwet By Julian Felipe 
-Go to youjizz.com and meatspin.com for more information :)
-Mamate ka bakla ali da ka mahal nang mama mu mate nakamu
+*[[HIMNU NING KAPAMPANGAN]]
+
+Kapampangan misapwak
+
+King legwan, na ning, alaya
+
+Gabun ding pantas at marangal
+
+Sibul ning lugud, karinan ning tepangan
+
 Batis ning katalaruan, at panamdam makabalen
 
 Ligaya mi ing mie payapa
