*Empty MediaWiki Message*

--- a/Katy_Perry.mw
+++ b/Katy_Perry.mw
@@ -3,5 +3,5 @@ I '''Katheryn Elizabeth Hudson''' (mibait Oktubri 25, 1984 king [[Santa Barbara,
 
 {{Suli}}
 
-[[Kategorya:Deng talakanta king Estadus Unidus]]
-[[Kategorya:Deng artista king Estadus Unidus]]
+[[Category:Deng talakanta king Estadus Unidus]]
+[[Category:Deng artista king Estadus Unidus]]
