([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Castanea dentata JPG.jpg]] → [[File:Castanea dentata.jpg]] [[c:COM:FR#reasons|File renaming criterion #6]]: Non-controversial maintenance and bug fixes, including fixing double extensions, invalid or in...

--- a/Kastanias.mw
+++ b/Kastanias.mw
@@ -39,7 +39,7 @@ Ing '''Kastanias''' ('''''Castanea'''''), ''Chestnut'' keng English (deng aliwan
 <gallery>
 Image:Châtaigner (Castanea sativa) JPG01.jpg|Ing metung a ''Castanea sativa'' pun dutung
 Image:Castanea crenata3.jpg|''Castanea crenata'' foliage
-Image:Castanea dentata JPG.jpg|''Castanea dentata'' foliage
+Image:Castanea dentata.jpg|''Castanea dentata'' foliage
 </gallery><gallery>
 Image:Chestnuts.jpg|Ing kastanias king kilub ning kayang masuksuk a balut
 Image:Chestnut blossom.png|Male catkins of Japanese Chestnut (''Castanea crenata''), [[Chiba Prefecture|Chiba]], [[Japan]], mid-June.
