([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Castanea dentata JPG.jpg]] → [[File:Castanea dentata.jpg]] [[c:COM:FR#reasons|File renaming criterion #6]]: Non-controversial maintenance and bug fixes, including fixing double extensions, invalid or in...

--- a/Kastanyas.mw
+++ b/Kastanyas.mw
@@ -42,7 +42,7 @@
 <gallery>
 Image:Châtaigner (Castanea sativa) JPG01.jpg|A ''Castanea sativa'' tree
 Image:Castanea crenata3.jpg|''Castanea crenata'' foliage
-Image:Castanea dentata JPG.jpg|''Castanea dentata'' foliage
+Image:Castanea dentata.jpg|''Castanea dentata'' foliage
 Image:Chestnut flowers.jpg|''Castanea sativa'' male catkins (pale buff) and female catkins (green, spiny, partly hidden by leaves)
 Image:Chestnuts.jpg|Chestnuts inside their spiky capsule
 Image:Chestnut03.jpg|Chestnuts can be found on the ground around trees
