*Empty MediaWiki Message*

--- a/Aisaku_Yokogawa.mw
+++ b/Aisaku_Yokogawa.mw
@@ -6,7 +6,7 @@
 | background          = solo_singer
 | native_name         = 
 | native_name_lang    = 
-| birth_name          = Yokogawa Aisaku
+| birth_name          = 横川 愛作 (''Yokogawa Aisaku'')
 | alias               = Saku, Saku-chan, Ais, Riou
 | birth_date          = {{birth date and age|1987|11|17}}
 | birth_place         = [[Hapon]]
@@ -22,7 +22,7 @@
 | module              = 
 }}
 
-I '''Aisaku Yokogawa''' (mibait Nobyembri 17, 1987), metung yang talakanta, modelu ampong talalikas a Hapones king [[Pilipinas]].
+I {{nihongo|'''Aisaku Yokogawa'''|横川愛作|Yokogawa Aisaku|mibait Nobyembri 17, 1987}}, metung yang talakanta, modelu ampong talalikas a Hapones king [[Pilipinas]].
 
 ==Dalerayan==
 {{reflist}}
