--- a/Aisaku_Yokogawa.mw
+++ b/Aisaku_Yokogawa.mw
@@ -29,8 +29,10 @@ I {{nihongo|'''Aisaku Yokogawa'''|横川 愛作|Yokogawa Aisaku|mibait Nobyembri
 
 ==Kasusug Kiluwal==
 * [http://www.aisakumusic.com AisakuMusic]
+* {{Facebook|AISAKUMUSIC}}
 * {{Twitter|aisakuofficial|Aisaku Yokogawa}}
 * {{Instagram|aisaku_hapon|Aisaku Yokogawa}}
+* [https://www.youtube.com/user/aichaco Aisaku Yokogawa] king [[YouTube]]
 
 {{Suli}}
 
